<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_area_triangulo"
            android:icon="@drawable/ic_opcion_24"
            android:title="@string/menu_area_triangulo" />
        <item
            android:id="@+id/nav_numero_aleatorio"
            android:icon="@drawable/ic_opcion_24"
            android:title="@string/menu_numero_aleatorio" />
        <item
            android:id="@+id/nav_convertir_binario"
            android:icon="@drawable/ic_opcion_24"
            android:title="@string/menu_convertir_binario" />
        <item
            android:id="@+id/nav_convertir_hexadecimal"
            android:icon="@drawable/ic_opcion_24"
            android:title="@string/menu_convertir_hexadecimal" />
    </group>
    <item android:title="Comunicate">
    <menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:show0In="navigation_view">
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_acerca"
                    android:icon="@drawable/ic_opcion_24"
                    android:title="@string/menu_acerca" />

            </group>

    </menu>
    </item>
</menu>