<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_acerca">

    <fragment
        android:id="@+id/nav_acerca"
        android:name="com.gocp.cutipaperez.fragment.informacion.AcercaFragment"
        android:label="@string/menu_acerca"
        tools:layout="@layout/fragment_acerca" />

    <fragment
        android:id="@+id/nav_area_triangulo"
        android:name="com.gocp.cutipaperez.fragment.ejercicios.AreaTrianguloFragment"
        android:label="@string/menu_area_triangulo"
        tools:layout="@layout/fragment_area_triangulo" />

    <fragment
        android:id="@+id/nav_numero_aleatorio"
        android:name="com.gocp.cutipaperez.fragment.ejercicios.NumeroAleatorioFragment"
        android:label="@string/menu_numero_aleatorio"
        tools:layout="@layout/fragment_numero_aleatorio" />

    <fragment
        android:id="@+id/nav_convertir_binario"
        android:name="com.gocp.cutipaperez.fragment.ejercicios.ConvertirBinarioFragment"
        android:label="@string/menu_convertir_binario"
        tools:layout="@layout/fragment_convertir_binario" />

    <fragment
        android:id="@+id/nav_convertir_hexadecimal"
        android:name="com.gocp.cutipaperez.fragment.ejercicios.ConvertirHexadecimalFragment"
        android:label="@string/menu_convertir_hexadecimal"
        tools:layout="@layout/fragment_convertir_hexadecimal" />


</navigation>