<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.ejercicios.AreaTrianguloFragment">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ladoA"
                style="@style/estilo_et"/>

            <EditText
                android:id="@+id/etLadoA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Ingrese lado A"
                android:inputType="numberDecimal"
                style="@style/estilo_tv"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ladoB"
                style="@style/estilo_et"/>

            <EditText
                android:id="@+id/etLadoB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="Ingrese lado B"
                android:inputType="numberDecimal"
                style="@style/estilo_tv"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ladoC"
                style="@style/estilo_et"
                />

            <EditText
                android:id="@+id/etLadoC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="Ingrese lado C"
                android:inputType="numberDecimal"
                style="@style/estilo_tv"/>

            <Button
                android:id="@+id/btnCalcular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="Calcular Área" />

            <TextView
                android:id="@+id/tvResultado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="Área: "
                android:textSize="18sp"
                style="@style/estilo_tv_rsp"/>
        </LinearLayout>
    </ScrollView>

</FrameLayout>